prevent sticky hover on mobile

--- a/styles/_aside.scss
+++ b/styles/_aside.scss
@@ -101,6 +101,20 @@ aside {
   }
 }
 
+@media (hover: none) and (pointer: coarse) {
+  aside .aside-sorting-buttons .button-group button:active {
+    background: white;
+
+    svg path {
+      stroke: $grey-placeholder;
+    }
+
+    &.active:active {
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.14);
+    }
+  }
+}
+
 @media only screen and (max-width: $breakpoint-1) {
   aside {
     row-gap: 3.5rem;
